--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -347,6 +347,40 @@ div#step4 {
     margin-bottom: 2px !important;
 }
 
+@media screen and (max-width:1024px) {
+    .benifit.card img {
+        width: 70px;
+    }
+    .benifit.card span {
+        font-size: 14px;
+    }
+}
+@media screen and (max-width:768px) {
+    .payment.card h1 {
+        font-size: 48px;
+        margin-bottom: 50px;
+    }
+    .product h3 {
+        font-size: 20px;
+        line-height: 24px;
+    }
+    .price h4 {
+        font-size: 20px;
+    }
+    .payment-btn {
+        height: 46px;
+    }
+    .payment-methord {
+        margin-top: 25px;
+    }
+    .payment.card {
+        min-height: unset;
+    }
+    div#step4 img{
+        width: 200px;
+    }
+
+}
 @media screen and (max-width:590px) {
     html {
         font-size: 14px;
@@ -395,5 +429,29 @@ div#step4 {
 
     .form-wrapper {
         overflow: hidden;
+    }
+
+    .benifit.card img {
+        width: 50px;
+    }
+    #multistep-form .form-content.step-3 h1 {
+        font-size: 68px;
+        line-height: 34px;
+        margin-top: 10px;
+    }
+    #multistep-form .form-content.step-3 h1 span {
+        font-size: 22px;
+    }
+    .payment-methord {
+        margin-top: 0px;
+    }
+    .step span:last-child {
+        bottom: -15px;
+        white-space: pre-wrap;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 30px;
+        text-align: center;
     }
 }
