--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,9 +28,30 @@ body {
     background: #191D23;
     padding: 85px 80px 55px;
     border-radius: 32px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     gap: 30px;
+}
+
+.form-content .form-control::-webkit-input-placeholder {
+    color: #808080;
+}
+
+.form-content .form-control::-moz-placeholder {
+    color: #808080;
+}
+
+.form-content .form-control:-ms-input-placeholder {
+    color: #808080;
+}
+
+.form-content .form-control::-ms-input-placeholder {
+    color: #808080;
 }
 
 .form-content .form-control::placeholder {
@@ -42,7 +63,8 @@ body {
     color: #808080;
     background: #FFFFFF;
     border: 2px solid #EFF0F7;
-    box-shadow: 8.327845573425293px 8.327845573425293px 24.983535766601562px 0px #0202460D;
+    -webkit-box-shadow: 8.327845573425293px 8.327845573425293px 24.983535766601562px 0px #0202460D;
+            box-shadow: 8.327845573425293px 8.327845573425293px 24.983535766601562px 0px #0202460D;
     padding: 8px 14px;
     font-size: 16.656px;
     font-style: normal;
@@ -64,9 +86,12 @@ body {
     color: #0D0F11 !important;
     font-size: 16px !important;
     background-color: #00FFA3 !important;
-    box-shadow: 8.328px 8.328px 24.984px 0px rgba(2, 2, 70, 0.15) !important;
+    -webkit-box-shadow: 8.328px 8.328px 24.984px 0px rgba(2, 2, 70, 0.15) !important;
+            box-shadow: 8.328px 8.328px 24.984px 0px rgba(2, 2, 70, 0.15) !important;
     border: 1px solid #00FFA3 !important;
     padding: 10px 15px !important;
+    -webkit-transition: 0.3s all;
+    -o-transition: 0.3s all;
     transition: 0.3s all;
 }
 
@@ -75,9 +100,12 @@ body {
     color: #253B80 !important;
     font-size: 16px !important;
     background-color: #D9D9D9 !important;
-    box-shadow: 8.328px 8.328px 24.984px 0px rgba(2, 2, 70, 0.15) !important;
+    -webkit-box-shadow: 8.328px 8.328px 24.984px 0px rgba(2, 2, 70, 0.15) !important;
+            box-shadow: 8.328px 8.328px 24.984px 0px rgba(2, 2, 70, 0.15) !important;
     border: 1px solid #D9D9D9 !important;
     padding: 10px 15px !important;
+    -webkit-transition: 0.3s all;
+    -o-transition: 0.3s all;
     transition: 0.3s all;
     gap: 8px;
     height: 53px;
@@ -103,9 +131,15 @@ body {
 }
 
 .devider span {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     background: #191D23;
     padding: 0px 16px;
     display: block;
@@ -122,7 +156,9 @@ body {
     background-color: #808080;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
     padding: 0px 16px;
 }
 
@@ -141,7 +177,9 @@ body {
     height: 8px;
     left: 50%;
     top: 0;
-    transform: translate(-50%, -0%);
+    -webkit-transform: translate(-50%, -0%);
+        -ms-transform: translate(-50%, -0%);
+            transform: translate(-50%, -0%);
     border-radius: 50%;
     background-color: #00FFA3;
 }
@@ -150,18 +188,28 @@ body {
     list-style-type: none;
     padding: 0;
     margin: 20px 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .step {
     width: 40px;
     background: #0d0f11;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     position: relative;
     padding: 20px 0;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     z-index: 1;
 }
 
@@ -169,7 +217,9 @@ body {
     position: absolute;
     top: 0;
     left: 50%;
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
     font-size: 10px;
     white-space: nowrap;
 }
@@ -179,7 +229,9 @@ body {
     top: unset;
     bottom: 0;
     left: 50%;
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
     font-size: 10px;
     white-space: nowrap;
 }
@@ -210,12 +262,15 @@ body {
     content: '';
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
     left: 35px;
     width: 200px;
     height: 2px;
     background-color: #fff;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     z-index: 0;
 }
 
@@ -291,7 +346,9 @@ body {
     background-position: -32px 0;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
     left: 14px;
 }
 
@@ -311,12 +368,44 @@ input#card-number {
     padding-left: 60px;
 }
 
+.addCard .form-control::-webkit-input-placeholder {
+    color: #A175FF !important;
+}
+
+.addCard .form-control::-moz-placeholder {
+    color: #A175FF !important;
+}
+
+.addCard .form-control:-ms-input-placeholder {
+    color: #A175FF !important;
+}
+
+.addCard .form-control::-ms-input-placeholder {
+    color: #A175FF !important;
+}
+
 .addCard .form-control::placeholder {
     color: #A175FF !important;
 }
 
 .addCard .form-control {
     color: #A175FF !important;
+}
+
+.addCard .copun-input .form-control::-webkit-input-placeholder {
+    color: #CFBBF9 !important;
+}
+
+.addCard .copun-input .form-control::-moz-placeholder {
+    color: #CFBBF9 !important;
+}
+
+.addCard .copun-input .form-control:-ms-input-placeholder {
+    color: #CFBBF9 !important;
+}
+
+.addCard .copun-input .form-control::-ms-input-placeholder {
+    color: #CFBBF9 !important;
 }
 
 .addCard .copun-input .form-control::placeholder {
@@ -328,7 +417,9 @@ input#card-number {
     position: absolute;
     right: 9px;
     top: 50%;
-    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
 }
 
 div#step4 {
@@ -448,9 +539,135 @@ div#step4 {
     .step span:last-child {
         bottom: -15px;
         white-space: pre-wrap;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        align-items: center;
-        justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        height: 30px;
+        text-align: center;
+    }
+    .nav-link {
+        font-size: 14px;
+    }
+    .form-site-logo img {
+        width: 50px !important;
+    }
+    .product h3 {
+        font-size: 14px;
+        line-height: 20px;
+    }
+    .price h4 {
+        font-size: 14px;
+    }
+    .payment.card h1 {
+        font-size: 38px;
+        margin-bottom: 50px;
+    }
+    div#step4 img {
+        width: 160px;
+    }
+}
+@media screen and (max-width:360px) {
+    html {
+        font-size: 12px;
+    }
+    div#step4 {
+        min-height: 60vh;
+    }
+    .nav-link {
+        font-size: 12px;
+    }
+    #login-tab .nav-link.active::after {
+        width: 5px;
+        height: 5px;
+    }
+    .step {
+        width: 30px;
+    }
+    .step .check-mark {
+        width: 20px;
+        height: 20px;
+    }
+    .step .check-mark::after {
+        left: 25px;
+    }
+    .step.completed .check-mark {
+        background-size: 14px;
+    }
+    .form-content {
+        padding: 30px 25px 25px;
+        gap: 15px;
+        border-radius: 10px;
+    }
+    .form-wrapper {
+        margin-top: 20px;
+    }
+    .form-content .form-control {
+        padding: 5px 10px;
+        font-size: 14px;
+    }
+    .form-header-top h2 {
+        font-size: 26px;
+    }
+    .loginForm .form-control {
+        padding: 5px 10px 5px 40px;
+        font-size: 14px;
+    }
+
+    .theme-btn-primary {
+        font-size: 15px !important;
+        padding: 5px 15px !important;
+    }
+
+    .form-header-top p {
+        font-size: 11px;
+    }
+
+    #multistep-form .form-content {
+        padding: 25px;
+    }
+
+    .step .check-mark.hide-bar::after {
+        display: block;
+        background: #0d0f11;
+    }
+
+    .form-wrapper {
+        overflow: hidden;
+    }
+
+    .benifit.card img {
+        width: 50px;
+    }
+    #multistep-form .form-content.step-3 h1 {
+        font-size: 46px;
+        line-height: 24px;
+        margin-top: 10px;
+    }
+    #multistep-form .form-content.step-3 h1 span {
+        font-size: 16px;
+        line-height: 16px;
+    }
+    .payment-methord {
+        margin-top: 0px;
+    }
+    .step span:last-child {
+        bottom: -15px;
+        white-space: pre-wrap;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
         height: 30px;
         text-align: center;
     }
